# CWF

./: .gitignore  BGAL-config.cmake.in  CMakeLists.txt  CMakeUserPresets.json  README.md  Temp.off  nohup.out
.cache/clangd/index/: AbstractMethod.cpp.A0884414625680DF.idx  AbstractMethod.h.0A094BDDB5212C83.idx  BOC.cpp.561889887563F5FF.idx  BOC.h.9A3C9C0294E4F823.idx  BV.cpp.2A46C988316E53E4.idx  BV.h.5B54FE1A36602C57.idx  BVTQ.h.896BBA439C4C2C6D.idx  Build.cpp.A2F02238BAE93AC9.idx  Build.h.07358AE12604D8CB.idx  CPD.cpp.75279241E9CAC436.idx  CPD.h.1F4A9A93D583ADB3.idx  CVT.cpp.A0E3403056FE7C61.idx  CVT.h.58EC2EA7454F7821.idx  Dijkstra.cpp.F2AB62579EAC58A5.idx  Dijkstra.h.25A7EA37C4E5F868.idx  DrawPS.cpp.AFAB6F8CF8C2B5F2.idx  DrawPS.h.345D0C02BBB3279E.idx  GetTime.h.54B1676DE691EBAD.idx  GradientDescent.cpp.7AF1E31BF4F9B950.idx  GradientDescent.h.6FECB00149EB93CF.idx  ICP.cpp.DAA659749D5C7E74.idx  ICP.h.2AA8F026E8649B90.idx  Integral.cpp.0ACFE5D23952AD83.idx  Integral.h.6D83D5BE8C5FABF3.idx  KDTree.cpp.204433E0B2DE5D3F.idx  KDTree.h.C74675FC6859B594.idx  LBFGS.cpp.4B70E20479EC646E.idx  LBFGS.h.2FD57A214E3D2CDA.idx  Line.cpp.4C858CB917C74CD3.idx  Line.h.0F4087AE770D849D.idx  LinearSystem.cpp.FC2E13C3E9E977C6.idx  LinearSystem.h.C42EB0CB21345A88.idx  ManifoldModel.cpp.1BF1257568BE2E4C.idx  ManifoldModel.h.A33217E900A5CE49.idx  MarchingTetrahedra.cpp.38E0093F8A948951.idx  MarchingTetrahedra.h.03C08F9421DC90EA.idx  MatVec.h.506ABD0CFABFE483.idx  MinEnclosingBall.cpp.D49C88A597FA4F87.idx  MinEnclosingBall.h.3DC392E814780DA3.idx  Model.cpp.E28F81F4884BEB9E.idx  (+58 more)
MAIN/: CMakeLists.txt  cwf.cpp  main.cpp
cmake/: BGALConfig.cmake.in  FindBGAL.cmake
include/BGAL/: CMakeLists.txt
include/BGAL/CVTLike/: CVT.h
include/BGAL/Integral/: Tetrahedron_arbq_rule.h
include/BGAL/MinEnclosingBall/: MinEnclosingBall.h
include/BGAL/Optimization/ALGLIB/: alglibmisc.h  interpolation.h
include/BGAL/Optimization/GradientDescent/: GradientDescent.h
include/BGAL/Optimization/LBFGS/: LBFGS.h
include/BGAL/PQP/: BV.h  PQP_Compile.h
include/BGAL/Sphere/: Sphere.h
lib/: Algorithmd.lib  Drawd.lib  Integrald.lib  PQPd.lib  PointCloudProcessingd.lib  Reconstructiond.lib
src/: CMakeLists.txt
src/CVTLike/: CMakeLists.txt  CVT.cpp
src/Integral/: Tetrahedron_arbq_rule.cpp
src/MinEnclosingBall/: CMakeLists.txt  MinEnclosingBall.cpp
src/Optimization/ALGLIB/: alglibmisc.cpp  interpolation.cpp
src/Sphere/: CMakeLists.txt  Sphere.cpp
src/Tessellation3D/: Tessellation3D.cpp
test/: CMakeLists.txt  main.cpp
